--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -13,35 +13,15 @@
     #+NAME: zshenv
     #+BEGIN_SRC shell :tangle (tangle-if-absent "${HOME}/.zshenv") :eval never :exports code
       export LANG=en_US.UTF-8
-      export ZPLUG_HOME=~/.zsh/zplug
       export RIPGREP_CONFIG_PATH=~/.ripgreprc
-      export GOPATH=~/workspace/envs/golang
-      # add go path
-      # add brew path
-      export PATH="/usr/local/bin:/usr/local/sbin:/usr/bin:/bin:/usr/sbin:/sbin:$PATH"
-      export PATH="$PATH:$GOPATH/bin"
-      export PATH="/usr/local/opt/make/libexec/gnubin:$PATH"
-      export PATH="/usr/local/opt/gettext/bin:$PATH"
-      export PATH="/workspace/envs/flutter/bin:$PATH"
-      export PATH="/usr/local/opt/binutils/bin:$PATH"
-      export PATH="/usr/local/opt/node@6/bin:$PATH"
-      export PATH="/usr/local/opt/make/libexec/gnubin:$PATH"
-      export PATH="/usr/local/opt/openssl/bin:$PATH"
-      export PATH="/usr/local/opt/coreutils/libexec/gnubin:$PATH"
-      export PATH="/usr/local/opt/llvm/bin:$PATH"
-      export PATH="$PATH:$HOME/.rvm/bin"
-      export PATH="/opt/xtensa-esp32-elf/bin:/usr/local/opt/mysql-client/bin:$PATH"
-      # Add RVM to PATH for scripting. Make sure this is the last PATH variable change.
-      export PATH="$PATH:$HOME/.rvm/bin"
-      export PATH="$HOME/.local/bin:$PATH"
       export JAVA_HOME="/Library/Java/JavaVirtualMachines/openjdk-13.0.1.jdk/Contents/Home"
-      export PATH="/usr/local/opt/openjdk/bin:$PATH"
-      export PATH="/usr/local/opt/coreutils/libexec/gnubin:$PATH"
       export HOMEBREW_BOTTLE_DOMAIN=https://mirrors.tuna.tsinghua.edu.cn/homebrew-bottles
     #+END_SRC
 
 *** zshrc 配置
     #+BEGIN_SRC shell :tangle "~/.zshrc" :eval never :exports code
+      export ZPLUG_HOME=~/.zsh/zplug
+
       [[ $TERM == "tramp" ]] && unsetopt zle && PS1='$ '&& return
       for file in ~/.zsh/init/*.zsh; do
 	  source "${file}"
@@ -79,7 +59,18 @@
 
 	  # Add custom bin files
 	  if [ -d "$HOME/bin" ]; then export PATH="$HOME/bin:$PATH"; fi
-	  if [ -d "$HOME/.local/bin" ]; then export PATH="$HOME/.local/bin:$PATH"; fi
+
+
+	  if [ -d "/usr/local/opt" ]; then
+	      BREW_BIN_PATH=$(find -L /usr/local/opt -maxdepth 3 -type d -name bin | paste -sd: -)
+	      export PATH="${BREW_BIN_PATH}:$PATH"; 
+	  fi
+	  if [ -d "$HOME/.local" ]; then
+	  LOCAL_PATH=$(find -L $HOME/.local/ -maxdepth 3 -name bin -type d| paste -sd: -)
+	      export PATH="${LOCAL_PATH}:$PATH"; 
+	  fi
+
+	  source ~/.zshenv
 
 	  export PATH_LOADED="true"
       fi
