--- a/README.org
+++ b/README.org
@@ -16,9 +16,13 @@
    - shell
 
 ** 前置依赖
-   1. brew 包管理器
+   1. brew 包管理器（注意一定要保持格式）
    #+BEGIN_SRC shell :eval never :exports code
-     /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
+     curl -sjklL https://raw.githubusercontent.com/Homebrew/install/master/install.sh \
+	 | sed 's#BREW_REPO="https://github.com/Homebrew/brew"#BREW_REPO="https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/brew.git"#'\
+	 |sed  '2i\
+	  HOMEBREW_CORE_GIT_REMOTE=https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-core.git
+     '|sh
    #+END_SRC
    如果你也在中国，你也在墙内，请使用如下的命令将 brew 的源调整到国内
    #+BEGIN_SRC shell :eval never :exports code
@@ -26,8 +30,11 @@
      git -C "$(brew --repo)" remote set-url origin https://github.com/Homebrew/brew.git
 
      # 以下针对 mac OS 系统上的 Homebrew
-     git -C "$(brew --repo homebrew/core)" remote set-url origin https://github.com/Homebrew/homebrew-core.git
-     git -C "$(brew --repo homebrew/cask)" remote set-url origin https://github.com/Homebrew/homebrew-cask.git
+     git -C "$(brew --repo)" remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/brew.git
+     git -C "$(brew --repo homebrew/core)" remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-core.git
+     git -C "$(brew --repo homebrew/cask)" remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-cask.git
+     git -C "$(brew --repo homebrew/cask-fonts)" remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-cask-fonts.git
+     git -C "$(brew --repo homebrew/cask-drivers)" remote set-url origin https://mirrors.tuna.tsinghua.edu.cn/git/homebrew/homebrew-cask-drivers.git
 
      # 以下针对 Linux 系统上的 Linuxbrew
      git -C "$(brew --repo homebrew/core)" remote set-url origin https://github.com/Homebrew/linuxbrew-core.git
