feat: add python and ninja to the brewfile

--- a/hammers/brew/brewfile.org
+++ b/hammers/brew/brewfile.org
@@ -109,6 +109,9 @@
       brew 'cloc'
       brew 'fzf'
       brew 'watch'
+
+      brew 'python'
+      brew 'ninja'
       brew 'gcc'
       brew 'llvm'
 
