feat: update the tmux scroll conf

--- a/hammers/tmux/tmux.org
+++ b/hammers/tmux/tmux.org
@@ -32,6 +32,8 @@
 
       # enable mouse to scoll history
       set -g mouse on
+      bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+      bind -n WheelDownPane select-pane -t= \; send-keys -M
 
       set -g @plugin 'tmux-plugins/tpm'
       set -g @plugin 'tmux-plugins/tmux-sensible'
