feat: update python config

--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -39,7 +39,7 @@
     #+END_SRC
 
     #+BEGIN_SRC shell :tangle "~/.zsh/init/python.zsh" :eval never :exports code
-      export PATH="/usr/local/opt/python@3.8/libexec/bin:$PATH"
+      export PATH="/usr/local/opt/python/libexec/bin:$PATH"
     #+END_SRC
 
     #+BEGIN_SRC shell :tangle "~/.zsh/init/init.zsh" :eval never :exports code
