--- a/hammers/zsh/rc.org
+++ b/hammers/zsh/rc.org
@@ -50,11 +50,6 @@
       fi
     #+END_SRC
 
-    #+BEGIN_SRC shell :tangle "~/.zsh/init/espressif.zsh" :eval never :exports code
-      LOCAL_PATH=$(find -L $HOME/.local/espressif/tools -name bin -type d| paste -sd: -)
-      export PATH="${LOCAL_PATH}:$PATH";
-    #+END_SRC
-
     #+BEGIN_SRC shell :tangle "~/.zsh/post/espressif.zsh" :eval never :exports code
       export PATH="${IDF_PATH}/tools:$PATH";
     #+END_SRC
@@ -160,4 +155,19 @@
 
     #+BEGIN_SRC shell :tangle "~/.zsh/post/alias.zsh" :eval never :exports code
       #!/bin/zsh
+      mk() {
+	  if [ -d build ]; then
+	      cmake --build build --target ${1:-all} -j `nproc`
+	  else
+	      cmake --build cmake-build-debug --target ${1:-all} -j `nproc`
+	  fi
+      }
+
+      mkt() {
+	  if [ -d build ]; then
+	      cmake --build build --target ${1:-test} -j `nproc`
+	  else
+	      cmake --build cmake-build-debug --target ${1:-test} -j `nproc`
+	  fi
+      }
     #+END_SRC
