feat: clock report without timestamp

--- a/hammers/emacs/literate.org
+++ b/hammers/emacs/literate.org
@@ -158,7 +158,7 @@
 	(org-log-done t)
 	(org-agenda-log-mode-items (quote (closed clock)))
 	(org-agenda-clockreport-parameter-plist
-	 '(:maxlevel 5 :block t :tstart t :tend t :emphasize t :link t :narrow 80 :indent t :compact t :fileskip0 t :formula % :timestamp t :level 5 :tcolumns nil :formatter nil))
+	 '(:maxlevel 5 :block t :tstart t :tend t :emphasize t :link t :narrow 80 :indent t :compact t :fileskip0 t :formula % :level 5 :tcolumns nil :formatter nil))
 	(org-global-properties (quote ((
 					"Effort_ALL" . "00:05 00:10 00:15 00:30 01:00 01:30 02:00 02:30 03:00"))))
 	(org-agenda-files `(
