--- a/hammers/hammerspoon/functions.org
+++ b/hammers/hammerspoon/functions.org
@@ -77,6 +77,17 @@
 		 hs.eventtap.event.newKeyEvent(hs.keycodes.map.cmd, false):post(app)
 	      end
 	   },
+	   {
+	      name = ".*",
+	      fn = function()
+		 local current = hs.keycodes.currentMethod()
+		 if (current == nil) then
+		    hs.keycodes.setMethod("Squirrel")
+		 else
+		    hs.keycodes.setLayout ("U.S.")
+		 end	       
+	      end
+	   },
 	}
      },
      {
@@ -96,7 +107,7 @@
 	      end
 	   },
 	   {
-	      name = "*",
+	      name = ".*",
 	      fn = function()
 		 local emacs = hs.appfinder.appFromName("Emacs")
 		 if (emacs == nil) then
@@ -321,7 +332,7 @@
 	for k, v in pairs (hotkeys) do
 	   local hk = filter(
 	      function(item)
-		 return string.match(name:lower(), item.name:lower())
+		 return string.match(name:lower(), item.name:lower()) 
 	      end,
 	      v.specs)
 
